fix filter breaking on mobile screen

--- a/src/routes/produtos/produtos.scss
+++ b/src/routes/produtos/produtos.scss
@@ -88,7 +88,6 @@ body{
 
   .wrapper-filter{
     gap: 2.5rem;
-    flex-direction: row;
   }
 
   .container-produtos{
